# quota-kolla

./: .gitignore  LICENSE  README.md  build.sh  package.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-23-macos-menubar-progress-app.md
scripts/: build-frontend.mjs
src/: index.html  menu.css  menu.html  menu.js  preferences.css  preferences.html  preferences.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: color.rs  config.rs  main.rs  menu.rs  provider.rs  render.rs
